# video_streaming

./: CMakeLists.txt  README.md  USER_QOS_PROFILES.xml  config.properties  config.toml
python/: ccvstream_types.xml  main_test.py
scripts/: run_cam_demo.sh  run_demo.bat  run_demo.sh  run_demo_ff_only.bat  run_demo_ff_only.sh
src/0_common/: app_helper.hpp  com_perf.hpp  rti_comm_test.cxx  rti_comms.cxx  rti_comms.hpp
src/1_ffmpeg_ext/: ffmpeg_stdio.cxx  ffmpeg_udp.cxx  stream_test.cxx  stream_vid.cxx  vstream_mon.cxx
src/idl/: cc_str_com_types.hpp  cc_str_com_types.idl  cc_str_com_typesPlugin.hpp  cc_str_test_types.cxx  cc_str_test_types.hpp  cc_str_test_types.idl  cc_str_test_types.xml  cc_str_test_typesPlugin.cxx  cc_str_test_typesPlugin.hpp  cctypes.cxx  cctypes.hpp  cctypes.idl  cctypes.xml  cctypesPlugin.cxx  cctypesPlugin.hpp
src/streamtest/: app_helper.hpp  com_perf.hpp  rti_comm_test.cxx  rti_comm_test.hpp  stream_test.cxx
src/streamvid/: app_helper.hpp  stream_vid.cxx
